--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -9,6 +9,7 @@
         <domain includeSubdomains="false">192.168.1.64</domain>
         <domain includeSubdomains="false">192.168.1.68</domain>
         <domain includeSubdomains="false">192.168.1.46</domain>
+        <domain includeSubdomains="false">192.168.1.36</domain>
         <!-- Allow common local network IPs for development -->
         <domain includeSubdomains="false">192.168.1.1</domain>
         <domain includeSubdomains="false">192.168.0.1</domain>
