--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
     <!-- Allow cleartext traffic for local development -->
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="false">31.97.233.69</domain>
+        <domain includeSubdomains="false">31.97.233.43</domain>
         <domain includeSubdomains="false">10.0.2.2</domain>
         <domain includeSubdomains="false">localhost</domain>
         <domain includeSubdomains="false">127.0.0.1</domain>
@@ -10,6 +11,9 @@
         <domain includeSubdomains="false">192.168.1.68</domain>
         <domain includeSubdomains="false">192.168.1.46</domain>
         <domain includeSubdomains="false">192.168.1.36</domain>
+        <domain includeSubdomains="false">192.168.1.43</domain>
+        <domain includeSubdomains="false">192.168.1.35</domain>
+        <domain includeSubdomains="false">192.168.35.</domain>
         <!-- Allow common local network IPs for development -->
         <domain includeSubdomains="false">192.168.1.1</domain>
         <domain includeSubdomains="false">192.168.0.1</domain>
