--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -13,7 +13,8 @@
         <domain includeSubdomains="false">192.168.1.36</domain>
         <domain includeSubdomains="false">192.168.1.43</domain>
         <domain includeSubdomains="false">192.168.1.35</domain>
-        <domain includeSubdomains="false">192.168.35.</domain>
+        <domain includeSubdomains="false">192.168.1.75</domain>
+
         <!-- Allow common local network IPs for development -->
         <domain includeSubdomains="false">192.168.1.1</domain>
         <domain includeSubdomains="false">192.168.0.1</domain>
